// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OfferData should render correctly 1`] = `
<View
  style={
    {
      "gap": 16,
    }
  }
>
  <View
    style={
      [
        {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "space-between",
          "maxWidth": "100%",
        },
        undefined,
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          [
            {
              "color": "#9F8C82",
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 24,
            },
            {},
          ],
          false,
        ]
      }
    >
      amount
    </Text>
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <View
          style={
            [
              undefined,
              {
                "justifyContent": "center",
              },
              {
                "height": 13,
                "width": 179,
              },
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "flex-end",
                  "marginBottom": -40,
                  "marginTop": -40,
                },
                {
                  "gap": 2,
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "justifyContent": "center",
                  },
                  {
                    "height": 20,
                    "width": 20,
                  },
                ]
              }
            >
              <test-file-stub
                fill="#888"
                style={
                  [
                    {
                      "height": 24,
                      "width": 24,
                    },
                    {
                      "height": 15,
                      "width": 15,
                    },
                  ]
                }
              />
            </View>
            <View
              style={
                [
                  {
                    "flexDirection": "row",
                  },
                  {
                    "alignItems": "baseline",
                  },
                  {
                    "gap": 3,
                    "paddingTop": 4,
                  },
                ]
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  [
                    {
                      "color": "#2B1911",
                      "fontFamily": "Baloo2-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0.16,
                      "lineHeight": 24,
                    },
                    [
                      {
                        "alignItems": "center",
                        "fontFamily": "CourierPrime-Bold",
                        "textAlign": "center",
                      },
                      {
                        "fontSize": 22,
                        "lineHeight": 29,
                      },
                    ],
                    false,
                  ]
                }
              >
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "alignItems": "center",
                            "fontFamily": "CourierPrime-Bold",
                            "textAlign": "center",
                          },
                          {
                            "fontSize": 22,
                            "lineHeight": 29,
                          },
                        ],
                        {
                          "color": "#2B19111A",
                          "letterSpacing": -1.65,
                        },
                      ],
                      false,
                    ]
                  }
                >
                  0
                </Text>
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "alignItems": "center",
                            "fontFamily": "CourierPrime-Bold",
                            "textAlign": "center",
                          },
                          {
                            "fontSize": 22,
                            "lineHeight": 29,
                          },
                        ],
                        {
                          "color": "#2B19111A",
                          "letterSpacing": -4.62,
                        },
                      ],
                      false,
                    ]
                  }
                >
                  .
                </Text>
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "alignItems": "center",
                            "fontFamily": "CourierPrime-Bold",
                            "textAlign": "center",
                          },
                          {
                            "fontSize": 22,
                            "lineHeight": 29,
                          },
                        ],
                        {
                          "color": "#2B19111A",
                          "letterSpacing": -1.65,
                        },
                      ],
                      false,
                    ]
                  }
                >
                  0
                </Text>
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "alignItems": "center",
                            "fontFamily": "CourierPrime-Bold",
                            "textAlign": "center",
                          },
                          {
                            "fontSize": 22,
                            "lineHeight": 29,
                          },
                        ],
                        {
                          "color": "#2B19111A",
                          "letterSpacing": -1.65,
                        },
                      ],
                      false,
                    ]
                  }
                >
                  0
                </Text>
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "alignItems": "center",
                            "fontFamily": "CourierPrime-Bold",
                            "textAlign": "center",
                          },
                          {
                            "fontSize": 22,
                            "lineHeight": 29,
                          },
                        ],
                        {
                          "color": "#2B19111A",
                          "letterSpacing": -7.699999999999999,
                        },
                      ],
                      false,
                    ]
                  }
                >
                   
                </Text>
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "alignItems": "center",
                            "fontFamily": "CourierPrime-Bold",
                            "textAlign": "center",
                          },
                          {
                            "fontSize": 22,
                            "lineHeight": 29,
                          },
                        ],
                        {
                          "color": "#2B19111A",
                          "letterSpacing": -1.65,
                        },
                      ],
                      false,
                    ]
                  }
                >
                  0
                </Text>
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "alignItems": "center",
                            "fontFamily": "CourierPrime-Bold",
                            "textAlign": "center",
                          },
                          {
                            "fontSize": 22,
                            "lineHeight": 29,
                          },
                        ],
                        {
                          "color": "#2B19111A",
                          "letterSpacing": -1.65,
                        },
                      ],
                      false,
                    ]
                  }
                >
                  0
                </Text>
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "alignItems": "center",
                            "fontFamily": "CourierPrime-Bold",
                            "textAlign": "center",
                          },
                          {
                            "fontSize": 22,
                            "lineHeight": 29,
                          },
                        ],
                        {
                          "color": "#2B19111A",
                          "letterSpacing": -1.65,
                        },
                      ],
                      false,
                    ]
                  }
                >
                  0
                </Text>
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "alignItems": "center",
                            "fontFamily": "CourierPrime-Bold",
                            "textAlign": "center",
                          },
                          {
                            "fontSize": 22,
                            "lineHeight": 29,
                          },
                        ],
                        {
                          "color": "#2B19111A",
                          "letterSpacing": -7.699999999999999,
                        },
                      ],
                      false,
                    ]
                  }
                >
                   
                </Text>
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "alignItems": "center",
                            "fontFamily": "CourierPrime-Bold",
                            "textAlign": "center",
                          },
                          {
                            "fontSize": 22,
                            "lineHeight": 29,
                          },
                        ],
                        {
                          "color": "#2B1911",
                          "letterSpacing": -1.65,
                        },
                      ],
                      false,
                    ]
                  }
                >
                  3
                </Text>
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "alignItems": "center",
                            "fontFamily": "CourierPrime-Bold",
                            "textAlign": "center",
                          },
                          {
                            "fontSize": 22,
                            "lineHeight": 29,
                          },
                        ],
                        {
                          "color": "#2B1911",
                          "letterSpacing": -1.65,
                        },
                      ],
                      false,
                    ]
                  }
                >
                  3
                </Text>
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "alignItems": "center",
                            "fontFamily": "CourierPrime-Bold",
                            "textAlign": "center",
                          },
                          {
                            "fontSize": 22,
                            "lineHeight": 29,
                          },
                        ],
                        {
                          "color": "#2B1911",
                          "letterSpacing": -1.65,
                        },
                      ],
                      false,
                    ]
                  }
                >
                  0
                </Text>
              </Text>
              <View
                style={
                  {
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        {
                          "fontFamily": "Baloo2-Medium",
                        },
                        false,
                        {
                          "fontSize": 16,
                          "lineHeight": 24,
                          "paddingBottom": 2,
                        },
                      ],
                      false,
                    ]
                  }
                >
                  sats
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "flexShrink": 1,
                "height": 16,
                "justifyContent": "center",
                "width": 16,
              },
              undefined,
            ]
          }
        >
          <test-file-stub
            fill="#F56522"
            style={
              [
                {
                  "height": 24,
                  "width": 24,
                },
                {
                  "height": "100%",
                  "width": "100%",
                },
              ]
            }
          />
          <View />
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "space-between",
          "maxWidth": "100%",
        },
        undefined,
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          [
            {
              "color": "#9F8C82",
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 24,
            },
            {},
          ],
          false,
        ]
      }
    >
      price
    </Text>
    <View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={false}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
            "justifyContent": "space-between",
            "opacity": 1,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              {
                "fontFamily": "Baloo2-SemiBold",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 28,
              },
              false,
            ]
          }
        >
          123.00 EUR
        </Text>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "flexShrink": 1,
                "height": 16,
                "justifyContent": "center",
                "width": 16,
              },
              undefined,
            ]
          }
        >
          <test-file-stub
            fill="#F56522"
            style={
              [
                {
                  "height": 24,
                  "width": 24,
                },
                {
                  "height": "100%",
                  "width": "100%",
                },
              ]
            }
          />
          <View />
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "space-between",
          "maxWidth": "100%",
        },
        undefined,
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          [
            {
              "color": "#9F8C82",
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 24,
            },
            {},
          ],
          false,
        ]
      }
    >
      to
    </Text>
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              [
                {
                  "color": "#EAE3DF",
                },
                {
                  "fontFamily": "Baloo2-SemiBold",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 28,
                },
              ],
              false,
            ]
          }
        >
          bc1q
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  {
                    "color": "#2B1911",
                  },
                  {
                    "fontFamily": "Baloo2-SemiBold",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 28,
                  },
                ],
                false,
              ]
            }
          >
            7qquf
          </Text>
          8 ... 9
          <Text
            allowFontScaling={false}
            style={
              [
                {
                  "color": "#2B1911",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 24,
                },
                [
                  {
                    "color": "#2B1911",
                  },
                  {
                    "fontFamily": "Baloo2-SemiBold",
                    "fontSize": 16,
                    "letterSpacing": 0.16,
                    "lineHeight": 28,
                  },
                ],
                false,
              ]
            }
          >
            d37jk
          </Text>
        </Text>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "flexShrink": 1,
                "height": 16,
                "justifyContent": "center",
                "width": 16,
              },
              undefined,
            ]
          }
        >
          <test-file-stub
            fill="#F56522"
            style={
              [
                {
                  "height": 24,
                  "width": 24,
                },
                {
                  "height": "100%",
                  "width": "100%",
                },
              ]
            }
          />
          <View />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`OfferData should render correctly without  price, currency and address 1`] = `
<View
  style={
    {
      "gap": 16,
    }
  }
>
  <View
    style={
      [
        {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "space-between",
          "maxWidth": "100%",
        },
        undefined,
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          [
            {
              "color": "#9F8C82",
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 24,
            },
            {},
          ],
          false,
        ]
      }
    >
      amount
    </Text>
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <View
          style={
            [
              undefined,
              {
                "justifyContent": "center",
              },
              {
                "height": 13,
                "width": 179,
              },
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "flex-end",
                  "marginBottom": -40,
                  "marginTop": -40,
                },
                {
                  "gap": 2,
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "justifyContent": "center",
                  },
                  {
                    "height": 20,
                    "width": 20,
                  },
                ]
              }
            >
              <test-file-stub
                fill="#888"
                style={
                  [
                    {
                      "height": 24,
                      "width": 24,
                    },
                    {
                      "height": 15,
                      "width": 15,
                    },
                  ]
                }
              />
            </View>
            <View
              style={
                [
                  {
                    "flexDirection": "row",
                  },
                  {
                    "alignItems": "baseline",
                  },
                  {
                    "gap": 3,
                    "paddingTop": 4,
                  },
                ]
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  [
                    {
                      "color": "#2B1911",
                      "fontFamily": "Baloo2-Regular",
                      "fontSize": 16,
                      "letterSpacing": 0.16,
                      "lineHeight": 24,
                    },
                    [
                      {
                        "alignItems": "center",
                        "fontFamily": "CourierPrime-Bold",
                        "textAlign": "center",
                      },
                      {
                        "fontSize": 22,
                        "lineHeight": 29,
                      },
                    ],
                    false,
                  ]
                }
              >
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "alignItems": "center",
                            "fontFamily": "CourierPrime-Bold",
                            "textAlign": "center",
                          },
                          {
                            "fontSize": 22,
                            "lineHeight": 29,
                          },
                        ],
                        {
                          "color": "#2B19111A",
                          "letterSpacing": -1.65,
                        },
                      ],
                      false,
                    ]
                  }
                >
                  0
                </Text>
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "alignItems": "center",
                            "fontFamily": "CourierPrime-Bold",
                            "textAlign": "center",
                          },
                          {
                            "fontSize": 22,
                            "lineHeight": 29,
                          },
                        ],
                        {
                          "color": "#2B19111A",
                          "letterSpacing": -4.62,
                        },
                      ],
                      false,
                    ]
                  }
                >
                  .
                </Text>
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "alignItems": "center",
                            "fontFamily": "CourierPrime-Bold",
                            "textAlign": "center",
                          },
                          {
                            "fontSize": 22,
                            "lineHeight": 29,
                          },
                        ],
                        {
                          "color": "#2B19111A",
                          "letterSpacing": -1.65,
                        },
                      ],
                      false,
                    ]
                  }
                >
                  0
                </Text>
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "alignItems": "center",
                            "fontFamily": "CourierPrime-Bold",
                            "textAlign": "center",
                          },
                          {
                            "fontSize": 22,
                            "lineHeight": 29,
                          },
                        ],
                        {
                          "color": "#2B19111A",
                          "letterSpacing": -1.65,
                        },
                      ],
                      false,
                    ]
                  }
                >
                  0
                </Text>
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "alignItems": "center",
                            "fontFamily": "CourierPrime-Bold",
                            "textAlign": "center",
                          },
                          {
                            "fontSize": 22,
                            "lineHeight": 29,
                          },
                        ],
                        {
                          "color": "#2B19111A",
                          "letterSpacing": -7.699999999999999,
                        },
                      ],
                      false,
                    ]
                  }
                >
                   
                </Text>
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "alignItems": "center",
                            "fontFamily": "CourierPrime-Bold",
                            "textAlign": "center",
                          },
                          {
                            "fontSize": 22,
                            "lineHeight": 29,
                          },
                        ],
                        {
                          "color": "#2B1911",
                          "letterSpacing": -1.65,
                        },
                      ],
                      false,
                    ]
                  }
                >
                  1
                </Text>
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "alignItems": "center",
                            "fontFamily": "CourierPrime-Bold",
                            "textAlign": "center",
                          },
                          {
                            "fontSize": 22,
                            "lineHeight": 29,
                          },
                        ],
                        {
                          "color": "#2B1911",
                          "letterSpacing": -1.65,
                        },
                      ],
                      false,
                    ]
                  }
                >
                  0
                </Text>
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "alignItems": "center",
                            "fontFamily": "CourierPrime-Bold",
                            "textAlign": "center",
                          },
                          {
                            "fontSize": 22,
                            "lineHeight": 29,
                          },
                        ],
                        {
                          "color": "#2B1911",
                          "letterSpacing": -1.65,
                        },
                      ],
                      false,
                    ]
                  }
                >
                  0
                </Text>
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "alignItems": "center",
                            "fontFamily": "CourierPrime-Bold",
                            "textAlign": "center",
                          },
                          {
                            "fontSize": 22,
                            "lineHeight": 29,
                          },
                        ],
                        {
                          "color": "#2B1911",
                          "letterSpacing": -7.699999999999999,
                        },
                      ],
                      false,
                    ]
                  }
                >
                   
                </Text>
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "alignItems": "center",
                            "fontFamily": "CourierPrime-Bold",
                            "textAlign": "center",
                          },
                          {
                            "fontSize": 22,
                            "lineHeight": 29,
                          },
                        ],
                        {
                          "color": "#2B1911",
                          "letterSpacing": -1.65,
                        },
                      ],
                      false,
                    ]
                  }
                >
                  0
                </Text>
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "alignItems": "center",
                            "fontFamily": "CourierPrime-Bold",
                            "textAlign": "center",
                          },
                          {
                            "fontSize": 22,
                            "lineHeight": 29,
                          },
                        ],
                        {
                          "color": "#2B1911",
                          "letterSpacing": -1.65,
                        },
                      ],
                      false,
                    ]
                  }
                >
                  0
                </Text>
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "alignItems": "center",
                            "fontFamily": "CourierPrime-Bold",
                            "textAlign": "center",
                          },
                          {
                            "fontSize": 22,
                            "lineHeight": 29,
                          },
                        ],
                        {
                          "color": "#2B1911",
                          "letterSpacing": -1.65,
                        },
                      ],
                      false,
                    ]
                  }
                >
                  0
                </Text>
              </Text>
              <View
                style={
                  {
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        {
                          "fontFamily": "Baloo2-Medium",
                        },
                        false,
                        {
                          "fontSize": 16,
                          "lineHeight": 24,
                          "paddingBottom": 2,
                        },
                      ],
                      false,
                    ]
                  }
                >
                  sats
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "flexShrink": 1,
                "height": 16,
                "justifyContent": "center",
                "width": 16,
              },
              undefined,
            ]
          }
        >
          <test-file-stub
            fill="#F56522"
            style={
              [
                {
                  "height": 24,
                  "width": 24,
                },
                {
                  "height": "100%",
                  "width": "100%",
                },
              ]
            }
          />
          <View />
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "space-between",
          "maxWidth": "100%",
        },
        undefined,
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        [
          {
            "color": "#2B1911",
            "fontFamily": "Baloo2-Regular",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 24,
          },
          [
            {
              "color": "#9F8C82",
              "fontFamily": "Baloo2-Regular",
              "fontSize": 16,
              "letterSpacing": 0.16,
              "lineHeight": 24,
            },
            {},
          ],
          false,
        ]
      }
    >
      to
    </Text>
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              {
                "fontFamily": "Baloo2-SemiBold",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 28,
              },
              false,
            ]
          }
        >
          loading...
        </Text>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": true,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "flexDirection": "row",
                "flexShrink": 1,
                "height": 16,
                "justifyContent": "center",
                "width": 16,
              },
              undefined,
            ]
          }
        >
          <test-file-stub
            fill="#F56522"
            style={
              [
                {
                  "height": 24,
                  "width": 24,
                },
                {
                  "height": "100%",
                  "width": "100%",
                },
              ]
            }
          />
          <View />
        </View>
      </View>
    </View>
  </View>
</View>
`;
